# INF420

Trabalho 1/quebracabeca/: AEstrela.java  AEstrelaImp.java  Main.java  Posicao.java  QuebraCabeca.java  QuebraCabecaImp.java
Trabalho 2/othelo/: facTab.properties  jogo.properties
Trabalho 2/othelo/jogo/: Jogador.java  ServidorImp.java
Trabalho 2/othelo/othelo/: JogadorGuloso.java  JogadorMinMax.java  JogadorMinMaxImp.java  JogadorMinMaxTemplate.java  TabuleiroOthelo.java
Trabalho 2/othelo/tabuleiro/: FactoryTabuleiro.java  Tabuleiro.java
Trabalho 3/reinforcement/: pyproject.toml  qlearningAgents.py
Trabalho 4/: Trabalho 4.ipynb  pyproject.toml
Trabalho 5/: Análise de Corpus e Word embedding.ipynb  main.ipynb  pyproject.toml
Transparencias/: RNN.ipynb  Redes neurais.ipynb
