[tool.poetry]
name = "trabalho 4"
version = "0.1.0"
description = ""
authors = ["Igor Cardoso <igorgcardoso7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
ipython = "^7.22.0"
tensorflow = "^2.4.1"
tensorflow-gpu = "^2.4.1"
keras = "^2.4.3"
Pillow = "^8.2.0"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
